--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,22 @@ apply plugin: 'com.android.application'
 apply plugin: 'realm-android'
 
 android {
+    signingConfigs {
+        release {
+			storeFile file("${System.env.ANDROID_SDK_ROOT}/SikarwarSoftwares.jks")
+			storePassword 'Tr1@ngle@123'
+			keyAlias 'key0'
+			keyPassword 'Tr1@ngle@123'
+        }
+    }
     compileSdkVersion 29
     defaultConfig {
         applicationId "com.ssoftwares.funzo"
         minSdkVersion 22
         targetSdkVersion 29
-        versionCode 2
-        versionName "2.0.0"
+        versionCode 1
+        versionName "1.0"
+        signingConfig signingConfigs.release
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
         compileOptions {
